# agent-eval

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bfcl_config.example.yaml  docker-compose.yml  eval_config.example.yaml  pyproject.toml  项目架构和方案.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_auth_tables.py  0003_add_routing_tables.py  0003_add_system_configs_table.py  0004_add_trace_watch_cursors.py  0005_add_source_project_to_dataset_metadata.py  0005a_add_routing_tables.py  0006_add_benchmark_tables.py  0007_add_schema_config_and_extra_fields.py  0008_add_benchmark_eval_fields.py  0009_add_eval_case_sources_and_evaluators.py  0010_add_dataset_name_to_candidate_cases.py  0011_add_attempts_made_to_test_results.py  0012_add_first_token_metrics.py  0013_add_evaluator_providers.py  0014_add_evaluator_versions.py  0015_drop_legacy_llm_judge_rows.py  0016_add_expected_output_to_test_results.py  0017_align_schema_with_models.py  0018_add_multitenant_and_portal.py  0019_widen_users_role.py  0020_add_entry_codes.py  0021_add_langfuse_metrics.py  0022_add_candidate_category.py  0023_add_dataset_type.py  0024_add_langfuse_trace_name.py  0025_widen_eval_score_dimension.py  0026_add_conversation_categories.py  0027_add_feedback_expected_answer.py  0028_add_feishu_open_id.py  0029_add_feishu_oauth_tokens.py  0030_add_scheduled_eval_tasks.py  0031_add_feishu_conversation_messages.py  0032_add_acceptance_policy.py  0033_add_feishu_union_id_display_name.py  0034_add_comparative_eval.py
e2e/: .gitignore  README.md  global-setup.ts  playwright.config.ts  refresh-auth.mjs  verify-comparative-full.mjs  verify-config-page.mjs  verify-cot-detail.mjs  verify-cot-new-run.mjs  verify-dry-run.mjs  verify-error-handling.mjs  verify-eval-combo.mjs  verify-eval-history-export.mjs  verify-evaluator-compare.mjs  verify-export.mjs  verify-traces-export.mjs
e2e/fixtures/: cases.json  multichat.xlsx
e2e/tests/: conversation-import.spec.ts  evaluation.spec.ts  langfuse-backfill.spec.ts  (+1 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
scripts/: apply_pr3a_ddl.py  bootstrap_multiturn_evaluators.py  docker-entrypoint.sh  dump_pg.py  keep-agent-tunnel.ps1  migrate-and-restore.sh
tests/: test_bitable_normalize.py  test_langfuse_compute.py  test_oauth_state.py
(+214 files in other folders)
